# event_pipeline

./: .coveragerc  .flake8  .gitignore  CODE_OF_CONDUCT  README.md  dump.rdb  evaluator_improvements.py  evaluator_improvemet_tests.py  executor.md  executor_test.py  genindex.html  index.html  manager_test.py  objects.inv  pyproject.toml  refactor-plan.md  requirements-build.txt  requirements-tests.txt  requirements.txt  search.html  searchindex.js  test.py  test_mechanism.py  tutorials
.github/workflows/: coverage.yml  profiler.yml  pylint.yml  python-publish.yml  python_package.yml  sphinx.yml
_sources/: index.rst.txt
_sources/api/: backend.rst.txt
_sources/tutorials/: batch.rst.txt  events.rst.txt  pipeline.rst.txt  pointy-lang.rst.txt
_static/: documentation_options.js
api/: backend.html  events.html  executors.html  fields.html  index.html  managers.html  metrics.html  mixins.html  parser.html  pipeline.html  result.html  scheduling.html  signals.html  telemetry.html
certificates/: server.csr  server.key  server.srl
docker/: build-metrics.sh
event_pipeline/: __init__.py  base.py  conf.py  constants.py  decorators.py  default_batch_processors.py  exceptions.py  fields.py  pipeline.py  pipeline_monitor.py  pipeline_wrapper.py  result.py  result_evaluators.py  scheduler.py  settings.py  task.py  task_oid.py  task_old.py  typing.py  utils.py
examples/: README.md  __init__.py  gs1.pty  main.py
nexus/: base.py  conf.py  decorators.py  exceptions.py  pipeline.py  pipeline_wrapper.py  result.py  settings.py  task.py
pipeline/: __init__.py  base.py  constants.py  decorators.py  exceptions.py  fields.py  pipeline.py  task.py  utils.py
profiler/: profiler.py
profiling/: DecisionTreePipeline.pty  LinearPipeline.pty  LinearPipelineWithPreviousResult.pty  ParallelPipeline.pty  README.md  command_line_flags.py  events.py  pipelines.py  profiler.py  stats.prof  stats.txt
scripts/: generate_protos.py
tests/: utils.py
tutorials/: batch.html  events.html  index.html  pipeline.html  pointy-lang.html
usage/: contributing.html  events.html  pipeline.html  scheduling.html  signals.html  telemetry.html
(+267 files in other folders)
