[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
[project]
name = "event_pipeline"
version = "0.0.1"
requires-python = ">=3.6"
dependencies = [
    "ply==3.11",
    "six==1.17.0",
    "treelib==1.7.0",
    "graphviz==0.20.3"
]
[tool.setuptools]
packages = ["event_pipeline"]
#[tool.setuptools.packages.find]
#where = ["event_pipeline"]